<resources>
    <string name="app_name">PTIT ME</string>

    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="package_value">package</string>
    <string name="alert_permission">Please accept permissions to continue</string>
    <string name="alert_use_version">Phiên bản không còn khả dụng</string>

    <string name="font_medium">sans-serif-medium</string>
    <string name="tra_cuu_diem">Tra cứu điểm thi</string>
    <string name="tra_lich_thi">Tra cứu lịch thi</string>

    <string name="masv">Nhập vào MSV</string>
    <string name="input_password">Nhập vào password QLDT</string>
    <string name="submit">Submit</string>

    <string name="exist_sv">Sinh viên không tồn tại</string>

    <string name="tenMon">Tên môn</string>
    <string name="diemcc">Điểm CC</string>
    <string name="diemkt">Điểm KT</string>
    <string name="diemth">Điểm TH</string>
    <string name="diembtl">Điểm BTL</string>
    <string name="diemthi">Điểm Thi</string>
    <string name="diemtb">Điểm TB</string>
    <string name="diemchu">Điểm chữ</string>

    <string name="av4">Hệ 4</string>
    <string name="av10">Hệ 10</string>
    <string name="tichluy">Tích lũy</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_tkb">Xem thời khóa biểu</string>
    <string name="nav_diemthi">Xem điểm thi</string>
    <string name="nav_lichthi">Xem lịch thi</string>
    <string name="nav_aboutus">About Us</string>
    <string name="nav_diemtichluy">Điểm tích lũy</string>
    <string name="nav_settings">Cài đặt</string>
    <string name="nav_checkupdate">Check For Update</string>

    <string name="wrong_msv">Không tìm thấy sinh viên trên hệ thống</string>

    <string name="null_msv">Yêu cầu nhập mã sinh viên</string>
    <string name="short_msv">Mã sinh viên không đủ 10 ký tự</string>

    <string name="message_opp">Oopp! Có lỗi</string>
    <string name="massage_sapra">Tính năng đang được xây dựng</string>
    <string name="massage_dungroi">Xin đừng rời đi</string>

    <string name="sign_out">Sign out</string>

    <string name="name_file_login">loginstatus</string>

    <string name="loading">Loading...</string>
    <string name="message_loading">Please wait while loading</string>

    <string name="sv_not_exist">Không tìm thấy sinh viên trên hệ thống</string>

    <string name="monday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="saturday">Thứ 7</string>
    <string name="sunday">Chủ nhật</string>

    <string name="kip1">Kíp 1</string>
    <string name="kip2">Kíp 2</string>
    <string name="kip3">Kíp 3</string>
    <string name="kip4">Kíp 4</string>
    <string name="kip5">Kíp 5</string>
    <string name="kip6">Kíp 6</string>

    <string name="not_yet">Chưa có điểm cho sinh viên này!</string>
    <string name="no_test_schedule">Chưa có có lịch thi cho sinh viên này!</string>
    <string name="some_error">Có lỗi xảy ra. Vui lòng thực hiện lại !!</string>

    <string name="new_available">Có bản câp nhật mới !</string>

    <string name="no_update">Không có bản cập nhật mới</string>
    <string name="no_update_description">Phiên bản của bạn đã được cập nhật mới nhất</string>
    <string name="no_connection">Không có Internet! Kiểm tra lại kết nối của bạn</string>
    <string name="download_complete">Download TKB thành công !</string>

    <string name="update_tkb">Update TKB</string>
    <string name="choose_week">Chọn tuần</string>
    <string name="name_week">Tuần </string>


    <string name="mamon">Mã môn:</string>
    <string name="sotc">Số TC: </string>
    <string name="giangvien">Giảng viên:</string>

    <string name="text_option">Chức năng mặc định</string>

    <string-array name="item_spinner">
        <item>@string/nav_tkb</item>
        <item>@string/nav_diemthi</item>
        <item>@string/nav_lichthi</item>
        <item>@string/nav_diemtichluy</item>
    </string-array>

    <string name="item_1_default">Chức năng mặc định</string>
    <string name="item_2_download_timetable">Download dữ liệu thời khóa biểu</string>
    <string name="save">Save</string>
    <string name="copyright">Copyright \u00a9</string>

    <string name="contactus">Contact Us</string>
    <string name="vistweb">Visit your website</string>
    <string name="likefb">Contact us via Facebook</string>
    <string name="rateus">Rate us on the Play Store</string>
    <string name="reportbug">Report bugs</string>


    <string-array name="item_settings">
        <item>@string/item_1_default</item>
        <item>@string/item_2_download_timetable</item>
    </string-array>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Xem thời khóa biểu</string>
    <string name="slide_1_desc">Vuốt sang trái, phải để xem các tuần.</string>

    <string name="slide_2_title">Xem tuần hiện tại</string>
    <string name="slide_2_desc">Chạm vào tuần để xem thông tin chi tiết</string>

    <string name="slide_3_title">Ghi chú việc cần làm</string>
    <string name="slide_3_desc">Chạm vào một ô trong thời khóa biểu để lưu ghi chú</string>

    <string name="slide_4_title">Xem thông tin môn học</string>
    <string name="slide_4_desc">Giữ vào một tiết học để hiện thị thông tin chi tiết</string>

    <string name="slide_5_title">Xem điểm thi</string>
    <string name="slide_5_desc">Xoay ngang màn hình để hiện thị chi điểm chi tiết</string>

    <string name="slide_6_title">Xem lịch thi</string>
    <string name="slide_6_desc">Xem lịch thi kết thúc học phần</string>

    <string name="slide_7_title">Xem điểm tích lũy</string>
    <string name="slide_7_desc">Bạn cần đăng nhập để sử dụng chức năng này</string>

    <string name="slide_8_title">Và còn nhiều hơn thế nữa</string>
    <string name="slide_8_desc">Hãy cùng chúng tôi có thêm nhiều trải nghiệm thú vị hơn nữa</string>

    <string name="ngaythi">Ngày Thi</string>
    <string name="giobatdau">Giờ Bắt Đầu</string>
    <string name="phongthi">Phòng Thi</string>

    <string name="description_about">Ứng dụng tra cứu thông tin PTIT</string>

</resources>
