<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_normal"
    android:layout_marginRight="@dimen/margin_normal"
    android:layout_marginTop="@dimen/toolbar_height"
    tools:context="com.proptit.nghiadv.diemthiptit.activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:text="@string/description_about"
            android:textColor="@color/colorGray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tv_contactus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:text="@string/contactus"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@drawable/ic_link" />

                <TextView
                    android:id="@+id/tv_visitweb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:text="@string/vistweb"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_content_us_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@drawable/ic_facebook" />

                <TextView
                    android:id="@+id/tv_contactfb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:text="@string/likefb"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@drawable/ic_store" />

                <TextView
                    android:id="@+id/tv_rateus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:text="@string/rateus"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_report_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/about_icon_size"
                    android:layout_height="@dimen/about_icon_size"
                    android:src="@drawable/ic_bug" />

                <TextView
                    android:id="@+id/tv_reportbug"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:gravity="center_vertical"
                    android:text="@string/reportbug"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/small_text_size"
        android:gravity="center"
        android:text="@string/copyright" />
</RelativeLayout>
