<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/forgot_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_normal"
    android:layout_marginRight="@dimen/margin_normal"
    android:layout_marginTop="@dimen/toolbar_height">

    <ScrollView
        android:id="@+id/svForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/lnTraCuu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_marginTop="5dp"
                android:fontFamily="@string/font_medium"
                android:text="@string/tra_cuu_diem"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_masv"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/text_view_border_shape"
                    android:hint="@string/masv"
                    android:inputType="textCapCharacters"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorDimGray"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="3"
                    android:background="@drawable/fullwidth_button_shape"
                    android:onClick="submit"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_tenSV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:text="Tên sinh viên"
                android:textColor="@color/black"
                android:textSize="@dimen/size_name" />

            <TableLayout
                android:id="@+id/tb_diem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:stretchColumns="0"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:paddingBottom="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="1dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="10"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/tenMon"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="5"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/diemthi"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="5"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/diemtb"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="5"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/diemchu"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tb_diemtb"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:paddingTop="1dp"
                android:stretchColumns="0"
                android:visibility="visible">

                <TableRow
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:paddingBottom="1dp"
                    android:paddingRight="1dp"
                    android:paddingTop="1dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="7"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/av10"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="7"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/av4"
                        android:textColor="@color/black" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:paddingBottom="1dp"
                    android:paddingRight="1dp">

                    <TextView
                        android:id="@+id/tv_avg10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="7"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_avg4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="7"
                        android:background="@color/white"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>