<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_normal"
    android:layout_marginRight="@dimen/margin_normal"
    android:layout_marginTop="@dimen/toolbar_height"
    tools:context="com.proptit.nghiadv.diemthiptit.activity.ScheduleTestActivity">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_large"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/svlichthi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/lnTraCuu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@string/font_medium"
                    android:text="@string/tra_lich_thi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_text_size" />

                <TextView
                    android:id="@+id/tv_tenSV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="Tên sinh viên"
                    android:textColor="@color/black"
                    android:textSize="@dimen/size_name"
                    android:visibility="visible" />

                <TableLayout
                    android:id="@+id/tb_lichthi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:stretchColumns="0"
                    android:visibility="visible">

                    <TableRow
                        android:layout_width="match_parent"
                        android:background="@color/black"
                        android:paddingBottom="1dp"
                        android:paddingRight="1dp"
                        android:paddingTop="1dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="9"
                            android:background="@color/white"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/tenMon"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="7"
                            android:background="@color/white"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/ngaythi"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/giobatdau"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/phongthi"
                            android:textColor="@color/black" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>
